# chirpy-learning

./: .gitignore  LICENSE  README.md  chirpy-learning.cabal  stack.yaml
app/: Main.hs
rng-test/: conduit-test.hs  poisTest  poisTest.hi  poisTest.hs  rng-test.R  test2.txt
src/: Lib.hs  RPois.hs
