name:                chirpy-learning
version:             0.1.0.0
synopsis:            Quick test of streaming data processing with Conduit
description:         Please see README.md
homepage:            https://github.com/githubuser/chirpy-learning#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Martin
maintainer:          sean.martin@nyu.edu
copyright:           2016 Sean Martin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Info, RPois
  build-depends:       base >= 4.7 && < 5
                     , random
                     , conduit
                     , transformers
                     , resourcet
                     , twitter-types-lens
                     , twitter-conduit
  default-language:    Haskell2010

executable chirpy-learning-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chirpy-learning
                     , conduit
                     , twitter-conduit
                     , text
                     , lens
                     , transformers
                     , resourcet
                     , twitter-types-lens
                     , random
  default-language:    Haskell2010

test-suite chirpy-learning-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chirpy-learning
                     , conduit
                     , twitter-conduit
                     , text
                     , lens
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/phasedchirp/chirpy-learning
